追加しないと行けないところをさらっと書いた。
Gainer -> Arduino にするので Arduino のセットアップに関する記述を追加する。
- Arduino IDE のインストール
- Firmata のインストール
加えて、Processing のインストール (ver. 2.1.1) も
- Processing IDE のインストール
- Processing 用 Arduino ライブラリのインストール

--- a/01/resume01.tex
+++ b/01/resume01.tex
@@ -1,5 +1,6 @@
 \documentclass[11pt,a4paper]{jarticle}
 \usepackage[dvipdfmx]{graphicx}
+\usepackage{url}
 
 \renewcommand{\baselinestretch}{1.05} 
 \marginparwidth=0cm
@@ -81,6 +82,23 @@
 \textbf{授業内の作業は、各個人アカウントで行うようにしてください}。
 指示にしたがって、共有アカウントでログインし、個人用アカウントの作成、パスワードの設定を行なってください。
 
+\subsection*{Processing の準備}
+本実習では Processing\footnote{\url{http://processing.org}} というプログラミング言語を用います。
+
+\begin{itemize}
+ \item Processing IDE のインストール
+ \item Processing 用 Arduino ライブラリのインストール
+\end{itemize}
+
+\subsection*{Arduino の準備}
+本実習ではスイッチやセンサ、LED などを PC から制御するために Arduino\footnote{\url{http://arduino.cc}} というマイコンを用います。
+
+\begin{itemize}
+ \item Arduino IDE のインストール
+ \item Arduino に Firmata を書き込む
+\end{itemize}
+
+
 \subsection*{実習で用いる部品}
 
 \begin{figure}[h!]
@@ -119,9 +137,6 @@
  \end{itemize}
 \end{itembox}
 
-
-\section{Arduino を使う準備}
-ほげほげ
 
 
 \section{電気、電流、抵抗のおさらい}
