--- a/04/resume04.tex
+++ b/04/resume04.tex
@@ -24,7 +24,7 @@
 %% header and footer
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\lhead{2014 年 5 月 7 日}
+\lhead{2014年度 春学期授業}
 \chead{インタラクティブ・アート実習}
 \rhead{担当教員: 松下 光範}
 \cfoot{\thepage}
@@ -67,250 +67,172 @@
 \begin{document}
 
 % title
-% \section*{\LARGE{第2講 プログラムと I/O モジュールを組み合わせる}}
-\section*{\LARGE{第2講 プログラムからLEDを制御する}}
-Processing を使って簡単な絵を書く。
- Arduino を組み合わせる。
+\section*{\LARGE{第4講 曲げセンサの値を取得する}}
+曲げセンサの値を Arduino を用いて取得する。
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\section{曲げセンサとは}
+曲げセンサは、センサ本体を曲げると抵抗値が変化するセンサである。
+プリント面が外側になるようにして使用する。(反対方向の値が取りたい場合は、2本組み合わせて使うと良い。)
 
-\section{Processing とは}
-Processing\footnote{\url{http://processing.org/}} は、Casey Reas と Benjamin Fry によるオープンソースプロジェクトであり、かつてはMITメディアラボで開発されていた。
-電子アートとビジュアルデザインのためのプログラミング言語であり、統合開発環境 (IDE) である。 視覚的なフィードバックが即座に得られるため、初心者がプログラミングを学習するのに適しており、電子スケッチブックの
-基盤としても利用できる。
-Javaを単純化し、グラフィック機能に特化した言語といえる。
+0度 ...... 約10KΩ
+↓
+(曲げると徐々に抵抗値が増加)
+↓
+90度 ...... 約30∼40KΩ
 
-\begin{flushright}
- -wikipedia-
-\end{flushright}
+\begin{itembox}{注意!}
+ \begin{itemize}
+  \item 強い力で無理やり折り曲げないように
 
-% \subsection*{Processing の開発環境}
-% Processing のアイコンをダブルクリックすると、統合開発環境 (IDE) が立ち上がる。
+	薄いフィルム状のセンサであるため、強い力で折りたたんだりすると、癖が付き正しい値が取得できなくなってしまう。
 
-\begin{figure}[h]
- \centering
- \includegraphics[width=0.5\columnwidth]{img/processing_ide.eps}
- \caption{Processing の IDE (統合開発環境)}
-\end{figure}
+  \item ブレッドボードに接続するときは必ず根本を持つ
+	
+	接続する端子部分は折れやすいので取り扱いに注意すること。
+ \end{itemize}
+\end{itembox}
 
+\section{回路を組み立てる}
 
-\section{Processing の基礎}
-以下で、Processing による基本的なプログラミングの説明を行います。
-なお、メニューバーの「Help → Reference」でインターネットブラウザが起動し、より詳しい説明が確認できますので、そちらも参考にしてください。
-ただし、英語表記です。
-Processing にはあらかじめサンプルコード (お手本になるプログラム) が、たくさん用意されているので、それを動かしてみてどんなことができるかを見ておくのも良いかもしれません。
-サンプルコードは、メニューバーの「File → Example」から見ることができます。
-
-% \subsection*{Processing の基礎}
-% \begin{lstlisting}
-%  void setup() {
-%    // プログラム開始時に一度だけ実行
-%  }
-
-%  void draw() {
-%    // setup() の後、プログラムが終わるまで繰り返される
-%  }
-% \end{lstlisting}
-
-\subsubsection*{初期化とループ処理}
-プログラムの一番最初に行われる処理のことを「初期化」という。Processingでは setup という関数で初期化が行われる。
-
-Processing のプログラムで、メインの処理を行う。自分で終わることを宣言する、stopボタン
-を押して中断する、エラーになるかしない限り、プログラムの実行は終わらずに、Processingは
-draw関数を実行し続ける。
-
-\begin{lstlisting}
- void setup(){
-   // 初期化の処理をここに書く
-   // プログラム開始時に1度だけ実行される
- }
-
- void draw(){
-   // 繰り返したい処理をここに書く
-   // setup()が実行された後にプログラムが終了するまで繰り返される
- }
-\end{lstlisting}
-
-
-\begin{itemize}
- \item \textbf{ウインドウサイズの指定}
-
-       size(w, h);
-       w = ウィンドウの幅(px)
-       h = ウィンドウの高さ(px)
-
-       setup() の中でしか使ってはいけません。
-       
- \item \textbf{カラーモードの設定}
-
-       colorMode(RGB, 256);
-       RGB = 赤・緑・青の組み合わせ (Red, Green, Blue)
-       256 = 色の範囲を256階調(段階)で指定
-
- \item \textbf{図形の原点指定}
-
-       rectMode(CORNER);
-       CORNER = 四角形の左上が原点 (デフォルト)
-       CENTER = 四角形の中心が原点
-       ※似たような設定に
-       ellipseMode(円の原点指定), imageMode(画像の原点指定)の設定がある。
-\end{itemize}
-
-
-
-\begin{itemize}
- \item \textbf{線を書く}
-
-       line(x1, y1, x2, y2);
-       x1 = 始点のx座標 y1 = 始点のy座標
-       x2 = 終点のx座標 y2 = 終点のy座標
-
- \item \textbf{三角形を書く}
-
-       triangle(x1, y1, x2, y2, x3, y3);
-       x1 = 角1のx座標 y1 = 角1のy座標
-       x2 = 角2のx座標 y2 = 角2のy座標
-       x3 = 角3のx座標 y3 = 角3のy座標
-
- \item \textbf{四角形を書く}
-
-       rect(x, y, sx, sy);
-       x = 原点のx座標 y = 原点のy座標
-       sx = 四角形の幅 sy = 四角形の高さ
-
- \item \textbf{円を書く}
-
-       ellipse(x, y, sx, sy);
-       x = 原点のx座標 y = 原点のy座標
-       sx = 円の幅 sy = 円の高さ
-
- \item \textbf{図形に色をつける}
-
-       fill(r, g, b);
-       r = Red の値  g = Green の値  b = Blue の値
-       fill(value);
-       value = r, g, b に同じ値を代入する
-
- \item \textbf{色を消す}
-
-       noFill();
-       
- \item \textbf{縁取り線に色をつける}
-
-       stroke(r, g, b);
-       stroke(value);
-       色の指定方法は fill と同じ
-
- \item \textbf{縁取り線の幅を調節する}
-       
-       strokeWeight(value);
-       value = 線の太さ(px)の指定
-
- \item \textbf{縁取り線を消す}
-
-       noStroke();
-
- \item \textbf{図形の縁をなめらかにする}
-
-       smooth();
-
- \item \textbf{ウィンドウの背景色を指定する}
-
-       background(r, g, b);
-       background(value);
-       色の指定方法は fill と同じ
-\end{itemize}
-
-
+回路図
 
 \subsection*{TRY1}
-Processing で 本日行う実習のベースとなるプログラムを作成する。
-\begin{enumerate}
- \item ウィンドウサイズが 幅が 300ピクセル、高さが 300ピクセル
- \item カラーモードは RGB の 256 階調
- \item ウィンドウの背景色は黒
- \item タテが 200 ピクセル、ヨコが 200 ピクセル の 白い円が、ウインドウの中心に表示される
-\end{enumerate}
-\begin{flushright}
- (時間のある人は、色々と改造してみましょう。) 
-\end{flushright}
-
-\begin{lstlisting}
- void setup(){
-   size(??? , ???);
-   colorMode(RGB, ???);
-   ellipseMode(CENTER);
-   background(???);
- }
- 
- void draw(){
-   background(???, ???, ???, ???);
- }
-\end{lstlisting}
-
-\begin{flushright}
- ヒント: ??? には数字が入ります
-\end{flushright}
-
-
-\subsection*{Processing で マウスのクリックを検出する}
-Processing では、「mousePressed」という命令文を用いることで、マウスのクリック動作
-を簡単に検出することができる。
-\begin{lstlisting}
- if (mousePressed == true){
-   // マウスボタンを押した時の処理
- } else {
-   // マウスボタンを離した時の処理
- }
-\end{lstlisting}
+回路図を参考にして、曲げセンサと Arduino を接続してみる。
+必ず、Arduino を PC から取り外した状態で配線すること。
 
 \subsection*{TRY2}
- TRY1で作ったプログラムを改造し、マウスが押されたときにPCに図形が表示されるようにする。
-Gainer mini を Processing で 使えるようにするライブラリのインポート
- Processing で Gainer mini を利用するには、ライブラリと呼ばれるプログラムのパーツを用
-いて Processing の機能を拡張する必要がある。Processing のメニューバーの中の Sketch →
-Import Library → gainer を選択すると、今書いているプログラムの一番初めに、ライブラリ
-を読み込むための命令文 import processing.gainer.* が書き込まれる。
-Gainerオブジェクトの作成
-上で挿入されたインポート文のすぐ下に
-Gainer gainer;
-void setup() 内に、
-gainer = new Gainer(this);
-Gainer mini の ボタンを利用する
-if (gainer.buttonPressed){
-<< Gainer mini のボタンが押された時の処理 >>
-}
+Processing の println 文を使って、曲げセンサで取得できる数値を確認する。
+できなければ前回の講義の資料を参考にしてみよう。
+使っているセンサが「光」から「曲げ」に変わっただけだ。
+
+\section{Processingで画像を表示する}
+Processing で画像を表示するには、sketch フォルダ(Processing のファイルが入っているフォルダ)内の data フォルダに使用したい画像をあらかじめ入れておく必要がある。
+自分でフォルダにコピーしても良いが、メニューバーの Sketch → Add Files... を選択し、使いたいファイル名を選ぶことで、ファイルが data フォルダにコピーされるので覚えておくと便利。
+
+PImage hogeImage;
+ PImage オブジェクトの宣言。void setup() より前の、プログラムの文頭に書く。複数回
+宣言しておくことで、違う種類の画像をプログラム内で用いることができる。
+!
+hogeImage = PImage オブジェクトの名前
+loadImage( “image.jpg” );
+ PImage オブジェクトに画像をロードする命令文。void setup() の中に書く。
+!
+“image.jpg” = 使用したい画像名 ( .bmp .jpg .png 形式の画像が使用できる。)
+imageMode(CORNER);
+ 画像を配置する時に基準となる原点を変更する命令文。void setup()内に書くことが多い。
+! CORNER
+=
+! CORNERS =
+! CENTER
+左上が原点(デフォルト)
+左上のx座標、左上のy座標、右下のx座標、右下のy座標の順に指定
+=
+画像の中心が原点
+image(<<PImageオブジェクト名>>, x, y, wid, hei);
+ アプリケーション画面に画像を表示する命令文。void draw() の中に書く。
+!
+x !
+= !
+原点のx座標! !
+!
+y !
+2
+= !
+原点のy座標
+2013年度 春学期授業       インタラクティブ・アート実習         担当:松下 光範
+!
+wid ! = !
+表示する画像の幅!
+!
+hei ! = !
+表示する画像の高さ
 
 
 \subsection*{TRY3}
- TRY2で作ったプログラムを改造し、Gainer mini のボタンが押された時に、PCに図形が表示
-されるようにする。
+幅640px、高さ480pxの画面に、好きな画像を表示するプログラムを作成する。
 
-Gainer mini のdigital output を利用する
-digital output (ON, OFF の切り替え)
- digital output を利用することで、Processing 上から、Gainer mini に流れる電流の ON 、
-OFF を制御することができる。
-ONにしたい場合
-gainer.setHigh(0);
-(※数字部分は dout のピン番号)
-OFFにしたい場合
-gainer.setLow(0);
-(※数字部分は dout のピン番号)
+\subsubsection*{Processing のシステム変数を利用する}
+Processing では、プログラムが実行中に決まる様々なデータを、Processing 自体が宣言した変数の中に収めてプログラム内で使用することができる。
+これを用いることで、プログラムを簡単に書くことができる。このような Processing があらかじめ用意してくれている変数のことを「システム変数」と呼ぶ。
+
+width
+!
+ウインドウ横幅のピクセル数
+height
+!
+ウインドウ縦幅のピクセル数
+mouseX
+!
+現在のマウスポインタのx座標
+mouseY
+!
+現在のマウスポインタのy座標
+pmouseX
+!
+前フレームでのマウスポインタのx座標
+pmouseY
+!
+前フレームでのマウスポインタのy座標
+
 
 \subsection*{TRY4}
- TRY3で作ったプログラムに命令文を追加して、Gainer mini のボタンが押された時に、dout 0
-に接続したLEDが光るようにする。
+TRY3 のプログラムを改変して、マウスポインタの位置に画像が表示されるようにする。
+
+<Hint>
+\begin{lstlisting}
+ PImage img;
+ void setup(){
+   size(640, 480);
+   colorMode(RGB, 256);
+   img = loadImage("image001.png");
+   imageMode(CENTER);
+ }
+ 
+ void draw(){
+   image(img, mouseX, mouseY, width, height);
+ } 
+\end{lstlisting}
 
 
-\begin{figure}[h]
- \centering
- \includegraphics[width=0.5\columnwidth]{img/circuit.eps}
-\end{figure}
+map 関数を利用する
+ 曲げセンサの場合、取得できる数値の範囲が狭いため、これをうまく利用するためには、
+Processing の Calculation 関数の一つの、map 関数を利用すると良い。
+map(value, low1, high1, low2, high2);
+! value! = 変換したい変数の名前 (ex: gainer.analogInput[0])
+  ! 
+! low1! ! = センサで得られる下限値
+! high1! = センサで得られる上限値
+  ! 
+! low2! ! = 変換したい(割り当てたい)変数の下限値
+! high2! = 変換したい(割り当てたい)変数の上限値
+  !
+  
+\subsection*{TRY5}
+TRY4 のプログラムを改造して、曲げセンサを曲げると画像が拡大・縮小するようにする。
+出来る人は、画像にフェードアウト効果もつけてみよう。
 
+<Hint>
+\begin{lstlisting}
+ import processing.gainer.*;
+ PImage img;
+ Gainer gainer;
 
-
-
-
+ void setup(){
+   size(640, 480);
+   colorMode(RGB, 256);
+   img = loadImage("image001.png");
+   imageMode(CENTER);
+   gainer = new Gainer(this);
+   gainer.beginAnalogInput();
+ }
+ 
+ void draw(){
+   background(255);
+   float val = map(gainer.analogInput[0], ???, ???, 0, 1);
+   image(img, mouseX, mouseY, ??? * width, ??? * height);
+ }
+\end{lstlisting}
 
 \end{document}
