--- a/01/resume01.tex
+++ b/01/resume01.tex
@@ -89,7 +89,7 @@ Processing を使って絵を書く。
  \begin{minipage}{0.5\columnwidth}
   \centering
   \includegraphics[height=0.4\columnwidth]{img/arduino.eps}
-  \caption{Arduino UNO}
+  \caption{Arduino}
  \end{minipage}
  \begin{minipage}{0.5\columnwidth}
   \centering
@@ -106,8 +106,8 @@ Processing を使って絵を書く。
  \end{minipage}
  \begin{minipage}{0.5\columnwidth}
   \centering
-  \includegraphics[height=0.4\columnwidth]{img/jumpwire.eps}
-  \caption{【図を差し替える】抵抗、スイッチ、センサ etc.}
+  \includegraphics[height=0.4\columnwidth]{img/parts.eps}
+  \caption{抵抗、スイッチ、センサ etc.}
  \end{minipage}
 \end{figure}
 
@@ -258,39 +258,33 @@ Processing では、あらかじめ用意されている「mouseX」「mouseY」
 よく、電気の流れは水の流れに例えられます。
 厳密にいえばさまざまな違いはありますが、その性質を大まかにとらえるには、水の流れに例えて理解するのは有効な方法です。
 
-\begin{itemize}
- \item \textbf{電圧}
-       
-       電圧は 2 点間の高度 (電位) の違いを表す用語です。
-       水は高度の高いところから低いところに向けて流れますが、電気も電位の高いところから低いところに向けて流れます。
-       水の場合には、それぞれの地点の高さを比較するのに、海抜などを基準として用います。
-       電気の場合には、グランド (GND) を基準として比較します。
-       電子回路ではよく「グランドを接続する」ということが行われます。
-       これは、基準であるグランドを共通にしないと、回路の部分ごとの電圧の基準が共通にならず、意図した通りに電気が流れてくれないためです。
-       電圧の単位はボルト (V) です。
-       数字が大きければ大きいほど、電圧が高いことを示します。
+\subsubsection*{電圧}
+電圧は 2 点間の高度 (電位) の違いを表す用語です。
+水は高度の高いところから低いところに向けて流れますが、電気も電位の高いところから低いところに向けて流れます。
+水の場合には、それぞれの地点の高さを比較するのに、海抜などを基準として用います。
+電気の場合には、グランド (GND) を基準として比較します。
+電子回路ではよく「グランドを接続する」ということが行われます。
+これは、基準であるグランドを共通にしないと、回路の部分ごとの電圧の基準が共通にならず、意図した通りに電気が流れてくれないためです。
+電圧の単位はボルト (V) です。
+数字が大きければ大きいほど、電圧が高いことを示します。
 
- \item \textbf{電流}
-      
-       電流は、水の流れが水流であるのと同じように電気の流れです。
-       電流は、電圧の高いところから低いところに向けて流れます。
-       水流も多い場合少ない場合がありますが、電流も多い場合や少ない場合があります。
-       電流の単位はアンペア (A) です。
-       数字が大きければ大きいほど、多くの電気が流れることを意味します。
+\subsubsection*{電流}
+電流は、水の流れが水流であるのと同じように電気の流れです。
+電流は、電圧の高いところから低いところに向けて流れます。
+水流も多い場合少ない場合がありますが、電流も多い場合や少ない場合があります。
+電流の単位はアンペア (A) です。
+数字が大きければ大きいほど、多くの電気が流れることを意味します。
 
- \item \textbf{抵抗}
-       
-       水の場合にも、何も障害物がない場合と、くねくね曲がって流れにくくしている場合では、水の流れにくさが異なります。
-       同様に、電気の場合にも電流が流れやすい場合と流れにくい場合があります。
-       この電流の流れにくさを表すのが抵抗です。
-       抵抗の単位はオーム (Ω) です。
-       数字が大きければ大きいほど、電流が流れにくいことを示します。
+\subsubsection*{抵抗}
+水の場合にも、何も障害物がない場合と、くねくね曲がって流れにくくしている場合では、水の流れにく
+さが異なります。
+同様に、電気の場合にも電流が流れやすい場合と流れにくい場合があります。
+この電流の流れにくさを表すのが抵抗です。
+抵抗の単位はオーム (Ω) です。
+数字が大きければ大きいほど、電流が流れにくいことを示します。
 
-\end{itemize}
-
-
-\subsubsection*{補助単位}
-電圧、電流、抵抗の単位はそれぞれボルト ($V$)、アンペア、オームですが、実際にはこれに接頭辞がついた補助単位が用いられる場合が多くあります。
+\subsubsection*{よく出てくる補助単位}
+電圧、電流、抵抗の単位はそれぞれボルト、アンペア、オームですが、実際にはこれに接頭辞がついた補助単位が用いられる場合が多くあります。
 以下は、登場する補助単位の例です。
 \begin{itemize}
  \item 1,000 倍を表す単位がキロ (例: 10 kΩ)
@@ -298,13 +292,11 @@ Processing では、あらかじめ用意されている「mouseX」「mouseY」
  \item 1/1,000 を表す単位がミリ (例: 10 mA)
 \end{itemize}
 
-
 \subsubsection*{オームの法則}
 電子部品に電圧をかけすぎたり、電流を流しすぎると壊れてしまう。
 そのために、電源側に抵抗器を配置し、電流量を調節する必要がある。
 
 オームの法則は、
-
 
 \begin{equation}
  V (電圧) = I (電流) \times R (抵抗)
@@ -317,62 +309,54 @@ R (抵抗) を求めるために指揮を変形すると、
 \end{equation}
 
 
-\subsection*{スイッチによって LED を点灯させる回路を作る}
-スイッチを押すと LED が点灯する、という回路を作ってみましょう
-今回は電源を取るために Arduino を用います。
-Arduino を用いると、プログラムで LED を制御できますが、それは次回以降に。
+\subsection*{スイッチを押したら LED を点灯させる}
+Arduino、スイッチ、抵抗、LED を用いて、
+スイッチを押したら LED を点灯させる回路を作る。
 
-Arduino、スイッチ、抵抗、LED を用いて簡単な回路を組む。
-
-
-\subsubsection*{使うもの}
 \begin{itemize}
- \item 電源 (Arduino, 5V)
- \item ブレッドボード
- \item LED
- \item タクトスイッチ
- \item 抵抗 (330 Ω)
+ \item \textbf{電源}
+       
+       今回は Arduino から電源を取ります。
+       Arduino は 5V と 3.3V を出力することができる。
+       今回は5Vのピンを、電源として用いる。(乾電池1本は 1.5V)
+
+ \item \textbf{スイッチ}
+
+       今回用いるのは、押した時だけ通電するスイッチ (タクトスイッチ)。
+       内部でつながっている部分の方向に注意!
+
+ \item \textbf{抵抗器}
+
+       電流の流れにくさをコントロールする。
+       抵抗で LED に流れる電流を制御することができる。
+       オームの法則を用いて抵抗値を算出する。
+       実際には、計算結果にぴったりの抵抗器があるとは限らない。
+       その場合、近い値の抵抗器を用いる。
+
+ \item \textbf{LED}
+
+       正式名称:Light Emitting Diode(発光ダイオード)。
+       電圧をかけると発光するダイオードで、消費電力が小さく寿命が長い。
+       赤色で1.8V、青色で3.6V程度の電圧が必要。
+       極性があるので注意! (電流を流す方向を間違えると壊れます...)
+       足が長いほうがアノード(プラス) 短いほうがカソード(マイナス)。
+       
 \end{itemize}
 
-% \subsubsection*{電源}
-% 電力の供給元
-% Gainer mini は 5V と 3.3V を出力することができる。
-% 今回は5Vのピンを、電源として用いる。(乾電池1本は 1.5V)
-
-% \subsubsection*{スイッチ}
-% 今回用いるのは、押した時だけ通電するスイッチ(タクトスイッチ)
-% 内部でつながっている部分の方向に注意!
-
-% \subsubsection*{抵抗器}
-% 電流の流れにくさをコントロールする。
-% 抵抗で LED に流れる電流を制御することができる。
-% オームの法則を用いて抵抗値を算出する。
-% 実際には、計算結果にぴったりの抵抗器があるとは限らない。
-% その場合、近い値の抵抗器を用いる。
-
-% \subsubsection*{LED}
-% 正式名称:Light Emitting Diode(発光ダイオード)
-% 電圧をかけると発光するダイオードで、消費電力が小さく寿命が長い。
-% 赤色で1.8V、青色で3.6V程度の電圧が必要。
-% 極性があるので注意! (電流を流す方向を間違えると壊れます...)
-% 足が長いほうがアノード(プラス) 短いほうがカソード(マイナス)
-
-\begin{figure}[h!]
- \centering
- \includegraphics[height=80mm]{img/circuit01.eps}
- \caption{回路図}
-\end{figure}
+図 \ref{circuit} を参考にして回路を組んでみましょう。
 
 \begin{figure}[h!]
  \begin{minipage}{0.5\columnwidth}
   \centering
-  \includegraphics[width=0.8\columnwidth]{img/release_switch.eps}
+  \includegraphics[height=60mm]{img/circuit01.eps}
+  \caption{回路図}
+  \label{circuit}
  \end{minipage}
  \begin{minipage}{0.5\columnwidth}
   \centering
-  \includegraphics[width=0.8\columnwidth]{img/push_switch.eps}
+  \includegraphics[height=60mm]{img/sample_circuit.eps}
+  \caption{配線例}
  \end{minipage}
- \caption{配線例: タクトスイッチを離した状態だと LED が消灯し、押した状態だと LED が点灯する}
 \end{figure}
 
 \end{document}
