--- a/01/resume01.tex
+++ b/01/resume01.tex
@@ -318,7 +318,7 @@ Arduino、スイッチ、抵抗、LED を用いて、
        
        今回は Arduino から電源を取ります。
        Arduino は 5V と 3.3V を出力することができる。
-       今回は5Vのピンを、電源として用いる。(乾電池1本は 1.5V)
+       今回は5Vのピンを電源として用いる。(乾電池1本は 1.5V)
 
  \item \textbf{スイッチ}
 
