--- a/01/resume01.tex
+++ b/01/resume01.tex
@@ -67,7 +67,7 @@
 \begin{document}
 
 % title
-\section*{\LARGE{第1講 test 基本的なプログラミングと電子回路の作成}}
+\section*{\LARGE{第1講 基本的なプログラミングと電子回路の作成}}
 Processing を使って絵を書く。
 基本的な子電回路を組む。
 
