change listings frame from 'shadow' to 'single'

--- a/02/resume02.tex
+++ b/02/resume02.tex
@@ -57,7 +57,7 @@
   breaklines=true,%折り返し
   %backgroundcolor={\color[gray]{.95}},
   framexleftmargin=0mm,
-  frame=shadowbox,
+  frame=single,
   rulesepcolor=\color{rulesepcolor},
   captionpos=b
 }
