--- a/06/resume06.tex
+++ b/06/resume06.tex
@@ -57,7 +57,7 @@
   breaklines=true,%折り返し
   %backgroundcolor={\color[gray]{.95}},
   framexleftmargin=0mm,
-  frame=shadowbox,
+  frame=single,
   rulesepcolor=\color{rulesepcolor},
   captionpos=b
 }
