change pullup and pulldown circuit images path.

--- a/02/resume02.tex
+++ b/02/resume02.tex
@@ -151,12 +151,12 @@ void draw() {
 \begin{figure}[h]
  \begin{minipage}{0.5\columnwidth}
   \centering
-  \includegraphics[width=0.8\columnwidth]{img/circuit.eps}
+  \includegraphics[width=0.8\columnwidth]{img/pullup.eps}
   \caption{プルアップ抵抗}
  \end{minipage}
  \begin{minipage}{0.5\columnwidth}
   \centering
-  \includegraphics[width=0.8\columnwidth]{img/circuit.eps}
+  \includegraphics[width=0.8\columnwidth]{img/pulldown.eps}
   \caption{プルダウン抵抗}
  \end{minipage}
 \end{figure}
