add led circuit by using arduino's digital output

--- a/02/resume02.tex
+++ b/02/resume02.tex
@@ -119,8 +119,8 @@ hoge
 
 \begin{figure}[h!]
  \centering
- \includegraphics[width=80mm]{img/pullup.eps}
- \caption{LEDの回路に変更}
+ \includegraphics[width=80mm]{img/02_led.eps}
+ \caption{回路図}
 \end{figure}
 
 \subsubsection*{プログラムを書く}
