--- a/05/resume05.tex
+++ b/05/resume05.tex
@@ -72,7 +72,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{赤外線センサとは}
+\section{赤外線センサとはtest}
 Arduino で、物体との距離を非接触で測定するには「超音波方式」と「赤外線方式」がある。
 赤外線センサは、(その名の通り)赤外線を使うことで距離を測定する。
 赤外線センサは、物体から人体まで幅広いものの距離を検出することができる。
