add Digital Input/Output

--- a/03/resume03.tex
+++ b/03/resume03.tex
@@ -71,6 +71,14 @@
 光センサと Arduino を用いて明るさの変化を計測する。
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{前回のふくしゅう}
+\subsection*{Digital Output}
+
+\section{Digital Input}
+
+\subsection*{プルアップ/プルダウン抵抗}
+
+
 \section{PWMで明かりをコントロール}
 \begin{lstlisting}
 //LEDのフェードインとフェードアウト
