--- a/03/resume03.tex
+++ b/03/resume03.tex
@@ -67,10 +67,82 @@
 \begin{document}
 
 % title
-\section*{\LARGE{第3講 明るさをはかる}}
-光センサと Arduino を用いて明るさの変化を計測する。
+% \section*{\LARGE{第3講 明るさをはかる}}
+% 光センサと Arduino を用いて明るさの変化を計測する。
+\section*{\LARGE{第3講 スイッチの ON/OFF を取得する}}
+Digital Input を用いてスイッチの ON/OFF を取得する。
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{前回の復習}
+前回やった Digital Output の復習をしましょう。
+ですが、前回やったことをもう一度やるだけではつまらないので、ついでに Processing の新しい命令を覚えましょう。
+
+\subsection*{mousePressed}
+mousePressed 変数はマウスが押されているか押されていないかによって、それぞれ true と false に値が変わります。
+これを使うことで、「マウスがクリックされたときに何かをする」という動作が実現できます。
+
+\begin{lstlisting}
+ if (mousePressed) {
+   // マウスが押されているときの処理
+ } else {
+   // マウスが押されていないときの処理
+ }
+\end{lstlisting}
+
+では、下のプログラムを参考にして前回の内容を思い出しながら、
+マウスをクリックしたら LED が点灯する、というプログラムを書いてみましょう。
+
+回路は前回のままで OK です。
+
+\begin{lstlisting}
+import processing.serial.*;
+import cc.arduino.*;
+ 
+Arduino arduino;
+int ledPin = 13;
+ 
+void setup() {
+  arduino = new Arduino(this, Arduino.list()[0], 57600);
+  arduino.pinMode(ledPin, Arduino.OUTPUT);
+}
+ 
+void draw() {
+  if (mousePressed) {
+    // ここに命令を追加する
+  } else {
+    // ここに命令を追加する
+  }
+}
+\end{lstlisting}
+
+\subsubsection*{ヒント}
+\begin{lstlisting}
+ arduino.digitalWrite(n, Arduino.HIGH); // n 番ピンを High (5V) に
+ arduino.digitalWrite(n, Arduino.LOW);  // n 番ピンを Low (5V) に
+\end{lstlisting}
+
+
+\section{Digital Input}
+ここからが本日の本題です。(前回は時間がなかった、とかは内緒)
+
+\subsection*{プルアップ/プルダウン抵抗}
+デジタル回路の場合、入力端子がどこにも接続されていないような状態 (オープン) が起こると、電圧が High または Low に定まらず誤動作の原因になります。
+そのため、回路を安定させるためにプルアップ抵抗/プルダウン抵抗と呼ばれる抵抗を用います。
+
+\begin{figure}[h!]
+ \begin{minipage}{0.5\columnwidth}
+  \centering
+  \includegraphics[width=0.7\columnwidth]{img/pulldown.eps}
+ \end{minipage}
+ \begin{minipage}{0.5\columnwidth}
+  \centering
+  \includegraphics[width=0.7\columnwidth]{img/pullup.eps}
+ \end{minipage}
+  \caption{プルダウン抵抗 (左) とプルアップ抵抗 (右)}
+\end{figure}
+
+
 \section{PWMで明かりをコントロール}
 \begin{lstlisting}
 //LEDのフェードインとフェードアウト
